# flexible-matchers

./: .flake8  .gitignore  LICENSE  MANIFEST.in  PROJECT_STATUS.md  PUBLISHING_SUMMARY.md  README.md  SETUP_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/flexible_matchers/: __init__.py
tests/: test_matchers.py
